--- a/.github/workflows/reusable-delivery-pr-chores.yml
+++ b/.github/workflows/reusable-delivery-pr-chores.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   lint-pr-title:
     name: Lint PR Title
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     # It does not make sense to run that workflow when a PR is closed
     if: ${{ github.event.action != 'closed' }}
     steps:
@@ -68,7 +68,7 @@ jobs:
   # When closing the PR, label it based on conventional commits
   # https://github.com/marketplace/actions/conventionnal-commit-pr-labeler
   label-release:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     name: Apply label base on conventional commit
     if: ${{ github.event.action == 'closed' }}
     steps:
