--- a/delivery/check-changelog/action.yml
+++ b/delivery/check-changelog/action.yml
@@ -30,6 +30,7 @@ runs:
       with:
         script: |
           const repo = context.payload.repository.full_name;
+          console.log(repo);
           const whitelist = ${{ inputs.repository-whitelist }};
           return whitelist.includes(repo);
 
