--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -69,6 +69,7 @@ on:
         type: boolean
         default: false
       tests_path:
+        type: string
         description: 'Folder containing the docker-compose.yml'
         required: false
         default: 'tests/'        
