fix: switch back to ubuntu-latest for an job using a docker action

--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -143,7 +143,7 @@ jobs:
 
   transfer:
     name: Transfer
-    runs-on: ubuntu-slim
+    runs-on: ubuntu-latest
     needs: [projects-label, projects-milestone]
     if: always() && github.event.sender.login != 'jahia-ci'
     steps:
