--- a/.github/workflows/reusable-chachalog-comment-pr.yml
+++ b/.github/workflows/reusable-chachalog-comment-pr.yml
@@ -7,14 +7,10 @@ jobs:
   comment-pr:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: read
       pull-requests: write
     steps:
       - uses: actions/checkout@v6
-        with:
-          fetch-depth: 1
-          token: ${{ github.token }}
-
 
       # If the repo does not contain a Chachalog config, this action
       # handles the creation of a default configuration, that should be 
