--- a/chachalog-is-whitelisted/action.yml
+++ b/chachalog-is-whitelisted/action.yml
@@ -65,6 +65,7 @@ runs:
             'Jahia/qa-mf-unomi-tracker-site',
             'Jahia/QA-Modules',
             'Jahia/sdk-jahia',
+            'Jahia/sandbox',
             'Jahia/selenium',
             'Jahia/trivy-db',
           ];
