--- a/.github/workflows/reusable-delivery-pr-chores.yml
+++ b/.github/workflows/reusable-delivery-pr-chores.yml
@@ -57,8 +57,8 @@ jobs:
             _This message will be deleted once the PR title conforms with the convention._
 
       # Delete a previous comment when the issue has been resolved
-      - if: ${{ steps.lint_pr_title.outputs.error_message == null }}
-        uses: marocchino/sticky-pull-request-comment@v2
+      - uses: marocchino/sticky-pull-request-comment@v2
+        if: ${{ steps.lint_pr_title.outputs.error_message == null }}
         env:
           GITHUB_TOKEN: ${{ secrets.GH_ISSUES_PRS_CHORES }}        
         with:   
